--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-opencv-python
-numpy
-pandas
-Pillow
-openpyxl
-matplotlib
+streamlit>=1.28.0
+opencv-python-headless>=4.8.0
+numpy>=1.21.0,<2.0.0
+pandas>=1.3.0,<3.0.0
+Pillow>=8.3.0,<11.0.0
+openpyxl>=3.0.0
+matplotlib>=3.5.0
+typing-extensions>=4.0.0
