--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit>=1.28.0
-opencv-python-headless>=4.8.0
-numpy>=1.21.0,<2.0.0
-pandas>=1.3.0,<3.0.0
-Pillow>=8.3.0,<11.0.0
-openpyxl>=3.0.0
-matplotlib>=3.5.0
-typing-extensions>=4.0.0
+streamlit==1.28.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.4
+pandas==2.0.3
+Pillow==10.0.0
+openpyxl==3.1.2
+matplotlib==3.7.2
